# software-engineer-agent

./: README.md  collect_source.py  main.py  pyproject.toml
sentient_agent/: __init.py  agent.py
sentient_agent/memory/: __init.py  postgres_memory_service.py
sentient_agent/prompts/: prompts.py
sentient_agent/tools/: environment_info.py  shell_tool.py
